# fflib2

./: CMakeLists.txt
benchmark/: allreduce.c
src/: ff.c  ff.h  ffallreduce.h  ffbuffer.c  ffbuffer.h  ffcallback.c  ffcallback.h  ffcomp.c  ffcomp.h  ffdatatype.c  ffdatatype.h  ffinternal.h  fflocks.h  ffnop.c  ffnop.h  ffop.c  ffop.h  ffop_default_progresser.c  ffop_default_progresser.h  ffop_list.h  ffop_mem.c  ffop_mem.h  ffoperator.h  ffprogress.c  ffprogress.h  ffrecv.c  ffrecv.h  ffschedule.c  ffschedule.h  ffsend.c  ffsend.h  ffstorage.c  ffstorage.h
src/bindings/: mpi_binding.c  mpi_binding.h
src/colls/: ffactivation.c  ffallreduce.c  ffrand_allreduce.c  ffsolo_allreduce.c  ffsolo_limiter.c
src/common/gcomp/: ffop_gcomp.c  ffop_gcomp_operator.c  ffop_gcomp_operator.h
src/components/gcomp/: ffop_gcomp.c  ffop_gcomp.h  ffop_gcomp_operator.c
src/components/mpi/: ffmpi.c  ffmpi_types.h  ffop_mpi.h  ffop_mpi_comp.c  ffop_mpi_progresser.c  ffop_mpi_progresser.c.bak  ffop_mpi_progresser.h  ffop_mpi_recv.c  ffop_mpi_send.c
src/mpi/: ffmpi.c  ffmpi.h  ffop_mpi.c  ffop_mpi.h  ffop_mpi_progresser.c  ffop_mpi_progresser.h  ffop_mpi_recv.c  ffop_mpi_send.c  ffop_mpi_test.c  ffop_mpi_wait.c
src/utils/: ffarman.c  ffarman.h  fflock.h  ffqman.c  ffqman.h
test/: CMakeLists.txt  activation_1.c  activation_tree.c  activation_tree_multiple.c  allreduce.c  allreduce_buffers_fflib_managed.c  allreduce_buffers_fflib_managed_inplace.c  allreduce_buffers_user_managed.c  allreduce_buffers_user_managed_callback.c  limiter.c  ping_pong_dep.c  ping_pong_schedule.c  rand_allreduce.c  rand_allreduce_correctness.c  rsgd.c  solo_allreduce_correctness.c  solo_allreduce_multiple.c  solo_allreduce_single.c  ssgd.c
utils/: opgraph.sh
